--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
         "@angular/http": "5.0.3",
         "@angular/platform-browser": "5.0.3",
         "@angular/platform-browser-dynamic": "5.0.3",
-        "@ionic-native/camera": "^5.0.0-alpha.0",
-        "@ionic-native/core": "^5.0.0-alpha.0",
-        "@ionic-native/geolocation": "^5.0.0-alpha.0",
+        "@ionic-native/camera": "^5.0.0-alpha.1",
+        "@ionic-native/core": "^5.0.0-alpha.1",
+        "@ionic-native/geolocation": "^5.0.0-alpha.1",
         "@ionic/storage": "2.1.3",
         "cordova-android": "^6.2.3",
+        "cordova-plugin-camera": "^2.4.1",
+        "cordova-plugin-compat": "^1.0.0",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-ionic-webview": "^1.1.11",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -47,7 +50,9 @@
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-camera": {}
         },
         "platforms": [
             "android"
